--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -33,25 +33,27 @@ jobs:
 
     - name: Pull P4C and link P4RuntimeSmith.
       run: |
-        git clone --recurse-submodules -j2 https://github.com/p4lang/p4c/ $GITHUB_WORKSPACE/../p4c
-        ln -sf $GITHUB_WORKSPACE $GITHUB_WORKSPACE/../p4c/backends/p4tools/modules/
+        git clone --recurse-submodules -j2 https://github.com/p4lang/p4c/ $GITHUB_WORKSPACE/p4c
+        ln -sf $GITHUB_WORKSPACE $GITHUB_WORKSPACE/p4c/backends/p4tools/modules/
 
     - name: Build (Ubuntu 22.04)
       run: |
         tools/ci-build.sh
-      working-directory: ../p4c
+      working-directory: p4c
 
     - name: Test
       run: |
         ctest -R rtsmith- --output-on-failure --schedule-random
-      working-directory: ../p4c/build
+      working-directory: p4c/build
 
 
   # Build and test P4RuntimeSmith on MacOS 14
   test-mac-os:
     runs-on: macos-14
+    env:
+      CTEST_PARALLEL_LEVEL: 4
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
       with:
         submodules: recursive
 
@@ -65,10 +67,32 @@ jobs:
       run: |
         git clone --recurse-submodules -j2 https://github.com/p4lang/p4c/ $GITHUB_WORKSPACE/../p4c
         ln -sf $GITHUB_WORKSPACE $GITHUB_WORKSPACE/../p4c/backends/p4tools/modules/
+        ln -sf $GITHUB_WORKSPACE/../p4c/tools/install_mac_deps.sh $GITHUB_WORKSPACE/install_mac_deps.sh
+
+    - name: Get brew cache dir
+      id: brew-cache
+      run: |
+        echo "dir=$(brew --prefix)" >> $GITHUB_OUTPUT
+
+    - name: Cache Homebrew Packages
+      id: cache-homebrew-packages
+      uses: actions/cache@v4
+      env:
+        cache-name: homebrew-packages
+      with:
+        path: ${{ steps.brew-cache.outputs.dir }}
+        key: ${{ runner.os }}-m1-${{ hashFiles('install_mac_deps.sh') }}
+
+
+    - name: Install dependencies (MacOS)
+      run: |
+        # TODO: We shouldn't need to do this.
+        python3 -m pip config set global.break-system-packages true
+        tools/install_mac_deps.sh
+      working-directory: ../p4c
 
     - name: Build (MacOS)
       run: |
-          tools/install_mac_deps.sh
           source ~/.bash_profile
           ./bootstrap.sh -DENABLE_GC=ON -DCMAKE_BUILD_TYPE=RELEASE \
               -DCMAKE_UNITY_BUILD=ON -DENABLE_TEST_TOOLS=ON
