--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -33,7 +33,7 @@ jobs:
 
     - name: Pull P4C and link P4RuntimeSmith.
       run: |
-        git clone --recurse-submodules -j2 https://github.com/p4lang/p4c/ $GITHUB_WORKSPACE/p4c
+        git clone --recurse-submodules -b fruffy/flay -j2 https://github.com/fruffy/p4c/ $GITHUB_WORKSPACE/p4c
         ln -sf $GITHUB_WORKSPACE $GITHUB_WORKSPACE/p4c/backends/p4tools/modules/
 
     - name: Build (Ubuntu 22.04)
@@ -65,7 +65,7 @@ jobs:
 
     - name: Pull P4C and link P4RuntimeSmith.
       run: |
-        git clone --recurse-submodules -j2 https://github.com/p4lang/p4c/ $GITHUB_WORKSPACE/../p4c
+        git clone --recurse-submodules -b fruffy/flay -j2 https://github.com/fruffy/p4c/ $GITHUB_WORKSPACE/../p4c
         ln -sf $GITHUB_WORKSPACE $GITHUB_WORKSPACE/../p4c/backends/p4tools/modules/
         ln -sf $GITHUB_WORKSPACE/../p4c/tools/install_mac_deps.sh $GITHUB_WORKSPACE/install_mac_deps.sh
 
@@ -94,7 +94,7 @@ jobs:
     - name: Build (MacOS)
       run: |
           source ~/.bash_profile
-          ./bootstrap.sh -DENABLE_GC=ON -DCMAKE_BUILD_TYPE=RELEASE \
+          ./bootstrap.sh -DENABLE_GC=ON -DCMAKE_BUILD_TYPE=Release \
               -DCMAKE_UNITY_BUILD=ON -DENABLE_TEST_TOOLS=ON
           make -C build -j$((`nproc`+1))
       working-directory: ../p4c
