Start implementing a runner for Flay and RtSmith.

--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -21,7 +21,7 @@ jobs:
       CMAKE_UNITY_BUILD: ON
       ENABLE_TEST_TOOLS: ON
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
       with:
         submodules: recursive
 
@@ -34,6 +34,7 @@ jobs:
     - name: Pull P4C and link P4RuntimeSmith.
       run: |
         git clone --recurse-submodules -b fruffy/flay -j2 https://github.com/fruffy/p4c/ $GITHUB_WORKSPACE/p4c
+        git clone  https://github.com/fruffy/flay/ $GITHUB_WORKSPACE/../p4c/backends/p4tools/modules/flay
         ln -sf $GITHUB_WORKSPACE $GITHUB_WORKSPACE/p4c/backends/p4tools/modules/
 
     - name: Build (Ubuntu 22.04)
@@ -67,6 +68,7 @@ jobs:
       run: |
         git clone --recurse-submodules -b fruffy/flay -j2 https://github.com/fruffy/p4c/ $GITHUB_WORKSPACE/../p4c
         ln -sf $GITHUB_WORKSPACE $GITHUB_WORKSPACE/../p4c/backends/p4tools/modules/
+        git clone  https://github.com/fruffy/flay/ $GITHUB_WORKSPACE/../p4c/backends/p4tools/modules/flay
         ln -sf $GITHUB_WORKSPACE/../p4c/tools/install_mac_deps.sh $GITHUB_WORKSPACE/install_mac_deps.sh
 
     - name: Get brew cache dir
@@ -95,8 +97,8 @@ jobs:
       run: |
           source ~/.bash_profile
           ./bootstrap.sh -DENABLE_GC=ON -DCMAKE_BUILD_TYPE=Release \
-              -DCMAKE_UNITY_BUILD=ON -DENABLE_TEST_TOOLS=ON
-          make -C build -j$((`nproc`+1))
+              -DCMAKE_UNITY_BUILD=ON -DENABLE_TEST_TOOLS=ON --build-generator "Ninja"
+          cmake --build build -- -j $(nproc)
       working-directory: ../p4c
 
     - name: Run tests (MacOS)
