--- a/targets/bmv2/CMakeLists.txt
+++ b/targets/bmv2/CMakeLists.txt
@@ -1,3 +1,9 @@
+if(ENABLE_TESTING)
+  # Include the test subdirectory.
+  message("-- Adding RTSmith v1model test suite.")
+  include(test/P4Tests.cmake)
+endif()
+
 # Source files for the main P4RtSmith.
 set(RTSMITH_SOURCES
     ${RTSMITH_SOURCES}
@@ -9,3 +15,4 @@ set(RTSMITH_SOURCES
 )
 
 set(RTSMITH_LIBS ${RTSMITH_LIBS} ${P4C_LIBRARIES} ${P4C_LIB_DEPS} ${CMAKE_THREAD_LIBS_INIT} PARENT_SCOPE)
+
