--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -3,6 +3,7 @@
 # ##################################################################################################
 if (TARGET flay)
   set(FLAY_CHECKER flay_checker.cpp)
+  set (FLAY_CHECKER_DRIVER ${CMAKE_CURRENT_BINARY_DIR}/rtsmith_flay_checker)
   add_executable(rtsmith_flay_checker ${FLAY_CHECKER})
   target_link_libraries(
     rtsmith_flay_checker PRIVATE flay rtsmith ${FLAY_LIBS} ${P4C_LIBRARIES} ${P4C_LIB_DEPS}
