--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -6,7 +6,6 @@ if (TARGET flay)
   set (FLAY_CHECKER_DRIVER ${CMAKE_CURRENT_BINARY_DIR}/rtsmith_flay_checker)
   add_executable(rtsmith_flay_checker ${FLAY_CHECKER})
   target_link_libraries(
-    rtsmith_flay_checker PRIVATE flay rtsmith ${FLAY_LIBS} ${P4C_LIBRARIES} ${P4C_LIB_DEPS}
-                                   ${CMAKE_THREAD_LIBS_INIT}
+    rtsmith_flay_checker PRIVATE flay rtsmith ${CMAKE_THREAD_LIBS_INIT}
   )
 endif()
