Add the capability to generate a series of updates.

--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -39,6 +39,7 @@ jobs:
 
     - name: Build (Ubuntu 22.04)
       run: |
+        sudo apt-get install -y libgmp-dev libelf-dev zlib1g-dev libjansson-dev
         tools/ci-build.sh
       working-directory: ../p4c
 
