--- a/configuration.toml
+++ b/configuration.toml
@@ -1,7 +1,3 @@
-[library]
-name = "toml++"
-authors = ["Mark Gillard <mark.gillard@outlook.com.au>"]
-
-[dependencies]
-cpp = 17
-
+[tables]
+num_entries_per_table = 1
+tables_to_skip = ["table1", "table2"]
