1. Implement a `FuzzerConfig` class that intends to be instantiated to store default configuration parameters that could be overriden using the configurations provided in a TOML file
2. Integrate `FuzzerConfig` into `RtSmithOptions`

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ set(RTSMITH_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/core/program_info.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/core/target.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/core/fuzzer.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/core/config.cpp
 )
 
 # GTest source files for P4RuntimeSmith.
