--- a/targets/bmv2/CMakeLists.txt
+++ b/targets/bmv2/CMakeLists.txt
@@ -11,6 +11,8 @@ set(RTSMITH_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/fuzzer.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/program_info.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/target.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/config.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/options.cpp
     PARENT_SCOPE
 )
 
