--- a/configuration.toml
+++ b/configuration.toml
@@ -4,5 +4,5 @@ maxTables = 10
 tablesToSkip = ["table1", "table2"]
 thresholdForDeletion = 50
 maxUpdateCount = 20
-# maxUpdateTimeInMicroseconds = 10000000
-# minUpdateTimeInMicroseconds = 1000000
+maxUpdateTimeInMicroseconds = 100001
+minUpdateTimeInMicroseconds = 50001
